--- a/index.html
+++ b/index.html
@@ -8,113 +8,123 @@
     </style>
 </head>
 <body style="background-color: black;">
-    <div style="color: aliceblue;">
-    <h1 align="center">The Best Movies According to Dhruv</h1>
-    <p style="text-align: center;"><big><b>Dhruv's recommended movies to add in your watch list.</b></big></p>
-    <hr width="50%">
-    </div>
-    <br>
+    <header>
+        <div style="color: aliceblue;">
+        <h1 align="center">The Best Movies According to Dhruv</h1>
+        <p style="text-align: center;"><big><b>Dhruv's recommended movies to add in your watch list.</b></big></p>
+        <hr width="50%">
+        </div>
+        <br>
+    </header>
 
-    <div style="background-color: orange; padding: 10px; padding-right: 60px; border-radius: 1%; margin: 0px 10px;">
-        <h2 style="padding-left: 36px;">Homicide Intervention Team</h2>
-        <hr style="background-color: red; height: 2px; margin-right: -50px;">
+    <main>
+        <div style="background-color: orange; padding: 10px; padding-right: 60px; border-radius: 1%; margin: 0px 10px;">
+            <h2 style="padding-left: 36px;">Homicide Intervention Team</h2>
+            <hr style="background-color: red; height: 2px; margin-right: -50px;">
+            <br>
+            <img src="./assets/images/HIT.jpg" alt="" width="512" style="border-radius: 1%; margin: 50px; margin-right: 0px;" align="right">
+            <ul>
+                <li>
+                    <h3>HIT: The First Case</h3>
+                    <p>Vikram, a cop with PTSD, investigates the disappearance of a young woman, uncovering a web of abduction and betrayal that leads to a shocking mastermind within his own circle.</p>
+                    <a href="https://youtu.be/YqX0jaXDABM?feature=shared"><button>Watch</button></a>
+                </li>
+                <li>
+                    <h3>HIT: The Second Case</h3>
+                    <p>A sharp cop takes on a chilling murder case, unraveling dark secrets in a coastal town. The investigation tests his instincts and courage as he races to catch a cunning killer.</p>
+                    <a href="https://dai.ly/x8q5sqq"><button>Watch</button></a>
+                </li>
+                <li>
+                    <h3>HIT: The Third Case</h3>
+                    <p>Arjun Sarkaar, a tough and obsessive officer, goes undercover to infiltrate a dark web cult involved in serial killings and organ trafficking, ultimately exposing the network and confronting the true mastermind.</p>
+                    <a href=""><button>Not Yet Uploaded</button></a>
+                </li>
+            </ul>
+            <br>
+        </div>
         <br>
-        <img src="./assets/images/HIT.jpg" alt="" width="512" style="border-radius: 1%; margin: 50px; margin-right: 0px;" align="right">
-        <ul>
-            <li>
-                <h3>HIT: The First Case</h3>
-                <p>Vikram, a cop with PTSD, investigates the disappearance of a young woman, uncovering a web of abduction and betrayal that leads to a shocking mastermind within his own circle.</p>
-                <a href="https://youtu.be/YqX0jaXDABM?feature=shared"><button>Watch</button></a>
-            </li>
-            <li>
-                <h3>HIT: The Second Case</h3>
-                <p>A sharp cop takes on a chilling murder case, unraveling dark secrets in a coastal town. The investigation tests his instincts and courage as he races to catch a cunning killer.</p>
-                <a href="https://dai.ly/x8q5sqq"><button>Watch</button></a>
-            </li>
-            <li>
-                <h3>HIT: The Third Case</h3>
-                <p>Arjun Sarkaar, a tough and obsessive officer, goes undercover to infiltrate a dark web cult involved in serial killings and organ trafficking, ultimately exposing the network and confronting the true mastermind.</p>
-                <a href=""><button>Not Yet Uploaded</button></a>
-            </li>
-        </ul>
-        <br>
-    </div>
-    <br>
 
-    <div style="background-color: skyblue; padding: 10px; padding-right: 60px; border-radius: 1%; margin: 0px 10px;">
-        <h2 style="padding-left: 36px;">Jurassic Park</h2>
-        <hr style="background-color: blue; height: 2px; margin-right: -50px;">
+        <div style="background-color: skyblue; padding: 10px; padding-right: 60px; border-radius: 1%; margin: 0px 10px;">
+            <h2 style="padding-left: 36px;">Jurassic Park</h2>
+            <hr style="background-color: blue; height: 2px; margin-right: -50px;">
+            <br>
+            <img src="./assets/images/JP.jpeg" alt="" width="512" style="border-radius: 1%; margin: 50px; margin-right: 0px;" align="right">
+            <ul>
+                <li>
+                    <h3>Jurassic Park</h3>
+                    <p>An industrialist invites some experts to visit his theme park of cloned dinosaurs. After a power failure, the creatures run loose, putting everyone's lives, including his grandchildren's, in danger.</p>
+                    <a href="https://1024terabox.com/s/1zcR36deBbNgDpdNzsLN-lA"><button>Watch</button></a>
+                </li>
+                <li>
+                    <h3>The Lost World: Jurassic Park</h3>
+                    <p>A research team is sent to the Jurassic Park Site B island to study the dinosaurs there, while an InGen team approaches with another agenda.</p>
+                    <a href="https://1024terabox.com/s/1jKDyMA_35A5RT0baHHBdkQ"><button>Watch</button></a>
+                </li>
+                <li>
+                    <h3>Jurassic Park III</h3>
+                    <p>A decidedly odd couple with ulterior motives convince Dr. Grant to go to Isla Sorna for a holiday, but their unexpected landing startles the island's new inhabitants.</p>
+                    <a href="https://1024terabox.com/s/1rkqYFLc626TGBl6a4laUkw"><button>Watch</button></a>
+                </li>
+                <li>
+                    <h3>Jurassic World</h3>
+                    <p>A new theme park, built on the original site of Jurassic Park, creates a genetically modified hybrid dinosaur, the Indominus Rex, which escapes containment and goes on a killing spree.</p>
+                    <a href="https://1024terabox.com/s/12sHFDF9UUriH3_rOuQ2uxQ"><button>Watch</button></a>
+                </li>
+                <li>
+                    <h3>Jurassic World: Fallen Kingdom</h3>
+                    <p>When the island's dormant volcano begins roaring to life, Owen and Claire mount a campaign to rescue the remaining dinosaurs from this extinction-level event.</p>
+                    <a href="https://1024terabox.com/s/1e7rovnAjHi02Ezuknvq6tA"><button>Watch</button></a>
+                </li>
+                <li>
+                    <h3>Jurassic World: Dominion</h3>
+                    <p>Four years after the destruction of Isla Nublar, Biosyn operatives attempt to track down Maisie Lockwood, while Dr Ellie Sattler investigates a genetically engineered swarm of giant insects.</p>
+                    <a href="https://1024terabox.com/s/1B0PLS0GqVyWzcPaltLwKZw"><button>Watch</button></a>
+                </li>
+                <li>
+                    <h3>Jurassic World Rebirth</h3>
+                    <p>An expedition braves isolated equatorial regions to extract DNA from three massive prehistoric creatures for a groundbreaking medical breakthrough.</p>
+                    <a href=""><button>Not Yet Uploaded</button></a>
+                </li>
+            </ul>
+            <br>
+        </div>
         <br>
-        <img src="./assets/images/JP.jpeg" alt="" width="512" style="border-radius: 1%; margin: 50px; margin-right: 0px;" align="right">
-        <ul>
-            <li>
-                <h3>Jurassic Park</h3>
-                <p>An industrialist invites some experts to visit his theme park of cloned dinosaurs. After a power failure, the creatures run loose, putting everyone's lives, including his grandchildren's, in danger.</p>
-                <a href="https://1024terabox.com/s/1zcR36deBbNgDpdNzsLN-lA"><button>Watch</button></a>
-            </li>
-            <li>
-                <h3>The Lost World: Jurassic Park</h3>
-                <p>A research team is sent to the Jurassic Park Site B island to study the dinosaurs there, while an InGen team approaches with another agenda.</p>
-                <a href="https://1024terabox.com/s/1jKDyMA_35A5RT0baHHBdkQ"><button>Watch</button></a>
-            </li>
-            <li>
-                <h3>Jurassic Park III</h3>
-                <p>A decidedly odd couple with ulterior motives convince Dr. Grant to go to Isla Sorna for a holiday, but their unexpected landing startles the island's new inhabitants.</p>
-                <a href="https://1024terabox.com/s/1rkqYFLc626TGBl6a4laUkw"><button>Watch</button></a>
-            </li>
-            <li>
-                <h3>Jurassic World</h3>
-                <p>A new theme park, built on the original site of Jurassic Park, creates a genetically modified hybrid dinosaur, the Indominus Rex, which escapes containment and goes on a killing spree.</p>
-                <a href="https://1024terabox.com/s/12sHFDF9UUriH3_rOuQ2uxQ"><button>Watch</button></a>
-            </li>
-            <li>
-                <h3>Jurassic World: Fallen Kingdom</h3>
-                <p>When the island's dormant volcano begins roaring to life, Owen and Claire mount a campaign to rescue the remaining dinosaurs from this extinction-level event.</p>
-                <a href="https://1024terabox.com/s/1e7rovnAjHi02Ezuknvq6tA"><button>Watch</button></a>
-            </li>
-            <li>
-                <h3>Jurassic World: Dominion</h3>
-                <p>Four years after the destruction of Isla Nublar, Biosyn operatives attempt to track down Maisie Lockwood, while Dr Ellie Sattler investigates a genetically engineered swarm of giant insects.</p>
-                <a href="https://1024terabox.com/s/1B0PLS0GqVyWzcPaltLwKZw"><button>Watch</button></a>
-            </li>
-            <li>
-                <h3>Jurassic World Rebirth</h3>
-                <p>An expedition braves isolated equatorial regions to extract DNA from three massive prehistoric creatures for a groundbreaking medical breakthrough.</p>
-                <a href=""><button>Not Yet Uploaded</button></a>
-            </li>
-        </ul>
-        <br>
-    </div>
-    <br>
 
-    <div style="background-color: greenyellow; padding: 10px; padding-right: 60px; border-radius: 1%; margin: 0px 10px 20px 10px;">
-        <h2 style="padding-left: 36px;">Jeepers Creeper</h2>
-        <hr style="background-color: green; height: 2px; margin-right: -50px;">
-        <br>
-        <img src="./assets/images/JC.jpg" alt="" width="512" style="border-radius: 1%; margin: 50px; margin-right: 0px;" align="right">
-        <ul>
-            <li>
-                <h3>Jeepers Creepers</h3>
-                <p>A brother and sister driving home through isolated countryside for spring break encounter a flesh-eating creature which is in the midst of its ritualistic eating spree.</p>
-                <a href="https://youtu.be/0stfBqFPkhk?feature=shared"><button>Watch</button></a>
-            </li>
-            <li>
-                <h3>Jeepers Creepers III</h3>
-                <p>Sheriff Dan Tashtego and a team of creeper hunters enlist the help of officer Davis Tubbs to help stop the monster's eating spree.</p>
-                <a href="https://youtu.be/J590z7y2dG8?feature=shared"><button>Watch</button></a>
-            </li>
-            <li>
-                <h3>Jeepers Creepers 2</h3>
-                <p>Set a few days after the original, a championship basketball team's bus is attacked by The Creeper, the winged, flesh-eating terror, on the last day of his 23-day feeding frenzy.</p>
-                <a href="https://youtu.be/IWuZB53pDn4?feature=shared"><button>Watch</button></a>
-            </li>
-            <li>
-                <h3>Jeepers Creepers: Reborn</h3>
-                <p>Forced to travel with her boyfriend, Laine begins to experience premonitions associated with the urban myth of The Creeper. She believes that something supernatural has been summoned - and that she is at the center of it all.</p>
-                <a href="https://youtu.be/fkIxl1iD7ws?feature=shared"><button>Watch</button></a>
-            </li>
-        </ul>
-        <br>
-    </div>
+        <div style="background-color: greenyellow; padding: 10px; padding-right: 60px; border-radius: 1%; margin: 0px 10px 20px 10px;">
+            <h2 style="padding-left: 36px;">Jeepers Creeper</h2>
+            <hr style="background-color: green; height: 2px; margin-right: -50px;">
+            <br>
+            <img src="./assets/images/JC.jpg" alt="" width="512" style="border-radius: 1%; margin: 50px; margin-right: 0px;" align="right">
+            <ul>
+                <li>
+                    <h3>Jeepers Creepers</h3>
+                    <p>A brother and sister driving home through isolated countryside for spring break encounter a flesh-eating creature which is in the midst of its ritualistic eating spree.</p>
+                    <a href="https://youtu.be/0stfBqFPkhk?feature=shared"><button>Watch</button></a>
+                </li>
+                <li>
+                    <h3>Jeepers Creepers III</h3>
+                    <p>Sheriff Dan Tashtego and a team of creeper hunters enlist the help of officer Davis Tubbs to help stop the monster's eating spree.</p>
+                    <a href="https://youtu.be/J590z7y2dG8?feature=shared"><button>Watch</button></a>
+                </li>
+                <li>
+                    <h3>Jeepers Creepers 2</h3>
+                    <p>Set a few days after the original, a championship basketball team's bus is attacked by The Creeper, the winged, flesh-eating terror, on the last day of his 23-day feeding frenzy.</p>
+                    <a href="https://youtu.be/IWuZB53pDn4?feature=shared"><button>Watch</button></a>
+                </li>
+                <li>
+                    <h3>Jeepers Creepers: Reborn</h3>
+                    <p>Forced to travel with her boyfriend, Laine begins to experience premonitions associated with the urban myth of The Creeper. She believes that something supernatural has been summoned - and that she is at the center of it all.</p>
+                    <a href="https://youtu.be/fkIxl1iD7ws?feature=shared"><button>Watch</button></a>
+                </li>
+            </ul>
+            <br>
+        </div>
+    </main>
+
+    <footer>
+        <div style="color: aliceblue;">
+        <p style="text-align: center;">The movies present here are not owed by @Dhruv-Janakala, these are only links of existing movies from internet.</p>
+        </div>
+    </footer>
 </body>
 </html>
