--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dhurv's Favourite Movies</title>
     <style>
+        @media screen and (max-width: 511px) {
+  img {
+    display: none;
+  }
+}
     </style>
 </head>
 <body style="background-color: black;">
